; ModuleID = '/home/carl/AnghaBench/git/vcs-svn/extr_sliding_window.c_input_error.c'
source_filename = "/home/carl/AnghaBench/git/vcs-svn/extr_sliding_window.c_input_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line_buffer = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"delta preimage ends early\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"cannot read delta preimage\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.line_buffer*)* @input_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @input_error(%struct.line_buffer* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.line_buffer*, align 8
  store %struct.line_buffer* %0, %struct.line_buffer** %3, align 8
  %4 = load %struct.line_buffer*, %struct.line_buffer** %3, align 8
  %5 = call i32 @buffer_ferror(%struct.line_buffer* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = call i32 @error(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  store i32 %8, i32* %2, align 4
  br label %11

9:                                                ; preds = %1
  %10 = call i32 @error_errno(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  store i32 %10, i32* %2, align 4
  br label %11

11:                                               ; preds = %9, %7
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @buffer_ferror(%struct.line_buffer*) #1

declare dso_local i32 @error(i8*) #1

declare dso_local i32 @error_errno(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
